--- a/Software/MyDoc/MyDoc.csproj
+++ b/Software/MyDoc/MyDoc.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrmAzuriraj.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAzuriraj.Designer.cs">
+      <DependentUpon>FrmAzuriraj.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmKorisnici.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,6 +85,9 @@
     <Compile Include="Klase\RepozitorijPlacanja.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FrmAzuriraj.resx">
+      <DependentUpon>FrmAzuriraj.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmKorisnici.resx">
       <DependentUpon>FrmKorisnici.cs</DependentUpon>
     </EmbeddedResource>
